# datos

./: README.md
airbnb/: pyproject.toml
airbnb/notebooks/: TP airbnb.ipynb
airbnb/notebooks/.ipynb_checkpoints/: TP airbnb-checkpoint.ipynb  airbnb.eda-checkpoint.ipynb
